# cupy-release-tools

./: .gitignore  .pep8  .pre-commit-config.yaml  .travis.yml  README.rst  build-rocm.sh  build.sh  check_pypi_assets.py  check_release_assets.py  cupy  dist.py  dist_config.py  dist_utils.py  download_nccl.sh  get_dist_info.py  jenkins.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: backport.yml  pretest.yml
.pfnci/: BRANCH  build_status.py  build_submit.sh  config.pbtxt  test.sh
.pfnci/wheel-linux/: main.sh  submit.sh  update-cuda-driver.sh
.pfnci/wheel-windows/: README.md  _flexci.ps1  build.ps1  install_cudnn.ps1  main.bat  submit.sh
builder/: Dockerfile  Dockerfile.el8  Dockerfile.jetson  agent.py  build-wrapper  build-wrapper-jetson  requirements.cupy-build.txt  setup_cuda_opt_lib.py  setup_devtoolset.sh  setup_python.sh  setup_yum_centos7.sh
builder-linux/: Dockerfile  agent.py
cuda-runfile/: Dockerfile  build.sh
publisher/: Dockerfile
release-tests/: README.rst
release-tests/common/: test_basic.py  test_cusolver.py  test_nvtx.py  test_thrust.py
release-tests/cudnn/: test_cudnn.py
release-tests/nccl/: test_nccl.py
release-tests/pkg_sdist/: test_preload.py
release-tests/pkg_wheel/: test_preload.py
release-tests/pkg_wheel_stub/: test_stub.py
release-tests/sparse/: test_basic.py
release_tests/common/: test_basic.py  test_nvtx.py
verifier/: Dockerfile.debian  Dockerfile.el8  Dockerfile.rhel  agent.py  setup_cuda_runtime_headers.py  setup_python.sh
verifier-linux/: Dockerfile.debian  Dockerfile.rhel  agent.py
(+9 files in other folders)
