[project]
name = "cupy-release-tools"
version = "13.4.1"
requires-python = ">=3.10"
dependencies = ["distlib", "typing-extensions"]

[project.optional-dependencies]
dev = ["autopep8", "mypy", "ruff"]

[tool.ruff]
line-length = 79
extend-exclude = [".pfnci"]

[tool.ruff.lint]
extend-select = ["I002", "Q"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
